[package]
name = "sonic-printer"
description = "Sonic Printer of HyperGrid"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }


[dependencies]
chrono =  { workspace = true }


[lib]
crate-type = ["lib"]
name = "sonic_printer"