[package]
name = "sonic-account-migrater-program"
description = "Sonic account migrater program"
documentation = "https://docs.rs/sonic-account-migrator-program"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
bincode = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true, features = ["derive"] }
solana-frozen-abi = { workspace = true }
solana-frozen-abi-macro = { workspace = true }
solana-program = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-program-runtime = { workspace = true }
solana-sdk = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[lib]
crate-type = ["lib"]
name = "sonic_account_migrater_program"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
